# alteryx2dbx

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  REVIEW_GUIDE.md  pyproject.toml
docs/: tool_coverage_research.md
docs/plans/: 2026-03-27-phase123-comprehensive-upgrade.md  2026-03-29-generate-command-design.md  2026-03-29-generate-command-implementation.md  2026-04-02-box-tool-support.md  2026-04-02-document-command.md
docs/specs/: 2026-04-02-box-tool-support-design.md  2026-04-02-document-command-design.md
examples/: simple_filter.yxmd
src/alteryx2dbx/: __init__.py  cli.py  fixes.py  manifest.py  starter.py
tests/: test_batch.py  test_box_e2e.py  test_box_parser.py  test_cache_validation.py  test_cli.py  test_cli_document.py  test_column_tracker.py  test_config_notebook.py  test_dag.py  test_dag_routing.py  test_disabled_nodes.py  test_e2e.py  test_fixes.py  test_generator.py  test_lessons.py  test_manifest.py  test_models.py  test_notebook_v2.py  test_parser.py  test_plugins.py  test_registry_prefix.py  test_schema_drift.py  test_traceability.py  test_transpiler_emit.py  test_transpiler_expanded.py  test_transpiler_parse.py  test_unpacker.py  test_utils_notebook.py  test_validator_v2.py
tests/fixtures/: box_workflow.yxmd  join_workflow.yxmd
tests/test_document/: test_config.py  test_confluence.py  test_mermaid.py  test_portfolio.py  test_report.py
tests/test_handlers/: test_advanced_formula.py  test_box_input.py  test_box_output.py  test_data_cleansing.py  test_easy_handlers.py  test_filter.py  test_find_replace.py  test_formula.py  test_join.py  (+10 more)
(+63 files in other folders)
