[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alteryx2dbx"
version = "0.2.0"
description = "Convert Alteryx workflows to PySpark Databricks notebooks"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "lxml>=5.0",
    "lark>=1.1",
    "networkx>=3.0",
    "jinja2>=3.1",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
alteryx2dbx = "alteryx2dbx.cli:main"
