[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alteryx2dbx"
version = "0.3.0"
description = "Convert Alteryx workflows to PySpark Databricks notebooks"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "lxml>=5.0",
    "lark>=1.1",
    "networkx>=3.0",
    "jinja2>=3.1",
    "click>=8.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
box = ["boxsdk[jwt]>=3.0"]
confluence = ["atlassian-python-api>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
alteryx2dbx = "alteryx2dbx.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
